# pdf-watermark-remover

./: .gitignore  LICENSE  README.md  app.py  cli.py  pyproject.toml  requirements.txt
src/pdf_watermark_remover/: __init__.py  core.py  redactor.py  utils.py
tests/: test_core.py
