[project]
name = "pdf-watermark-remover"
version = "0.1.0"
description = "Remove text and image watermarks from PDF files via CLI or Streamlit web app."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
dependencies = [
    "PyMuPDF>=1.23.0",
    "pdf-redactor>=0.1.0",
    "streamlit>=1.30.0",
]

[project.scripts]
pdf-watermark-remover = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
